[gd_scene load_steps=2 format=3 uid="uid://dhud0000000001"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
layer = 10
script = ExtResource("1_hud")

[node name="TopLeft" type="Control" parent="."]
anchors_preset = 0
offset_right = 320.0
offset_bottom = 60.0

[node name="LeftWeapons" type="Control" parent="."]
anchors_preset = 4
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -140.0
offset_right = 350.0
offset_bottom = 140.0
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="LeftWeapons"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4

[node name="Title" type="Label" parent="LeftWeapons/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "WEAPONS"

[node name="WeaponsList" type="VBoxContainer" parent="LeftWeapons/VBox"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="ModulesTitle" type="Label" parent="LeftWeapons/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "MODULES"

[node name="ModulesList" type="VBoxContainer" parent="LeftWeapons/VBox"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="HPBar" type="ProgressBar" parent="TopLeft"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 10.0
offset_right = -12.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HPLabel" type="Label" parent="TopLeft/HPBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 18
text = "100 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TopCenter" type="Control" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
pivot_offset = Vector2(100, 0)

[node name="LevelLabel" type="Label" parent="TopCenter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.95, 0.2, 1)
theme_override_colors/font_outline_color = Color(1, 0.5, 0, 0.8)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 24
text = "LV 1"
horizontal_alignment = 1

[node name="TopRight" type="Control" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_bottom = 100.0
grow_horizontal = 0
pivot_offset = Vector2(220, 0)

[node name="HBoxContainer" type="HBoxContainer" parent="TopRight"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 10.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TopRight/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="TimerLabel" type="Label" parent="TopRight/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "00:00"
horizontal_alignment = 2

[node name="CreditsLabel" type="Label" parent="TopRight/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.1, 1)
theme_override_colors/font_outline_color = Color(0.4, 0.3, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 18
text = "⟐ 0"
horizontal_alignment = 2

[node name="StardustLabel" type="Label" parent="TopRight/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.85, 1.0, 1)
theme_override_colors/font_outline_color = Color(0.1, 0.2, 0.4, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 18
text = "✦ 0"
horizontal_alignment = 2

[node name="CaptainAvatar" type="Control" parent="TopRight/HBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(72, 72)
size_flags_vertical = 4

[node name="BottomXP" type="Control" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -40.0
grow_horizontal = 2
grow_vertical = 0

[node name="BottomLeftDebug" type="VBoxContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -170.0
offset_right = 400.0
offset_bottom = -44.0
grow_vertical = 0
theme_override_constants/separation = 2

[node name="XPBar" type="ProgressBar" parent="BottomXP"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
max_value = 100.0
value = 0.0
show_percentage = false

[node name="XPLabel" type="Label" parent="BottomXP/XPBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 22
text = "XP: 0 / 100"
horizontal_alignment = 1
vertical_alignment = 1
